--- a/.github/workflows/deploy_vps.yml
+++ b/.github/workflows/deploy_vps.yml
@@ -1,9 +1,7 @@
 name: Deploy to VPS (v2-editor)
 
 on:
-  push:
-    branches:
-      - v2-editor
+  workflow_dispatch:
 
 concurrency:
   group: deploy-vps-v2-editor
