--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,6 +53,7 @@ jobs:
             git reset --hard origin/v2-editor
 
             echo "== Build & run =="
+            docker compose down || true
             docker compose pull || true
             docker compose up -d --build
 
