--- a/.github/workflows/deploy_vps.yml
+++ b/.github/workflows/deploy_vps.yml
@@ -52,6 +52,7 @@ jobs:
             git reset --hard origin/v2-editor
 
             echo "== Build & run =="
+            docker compose down || true
             docker compose pull || true
             docker compose up -d --build
 
