--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,12 +3,16 @@ name: CI
 on:
   push:
   pull_request:
+  workflow_call:  # Allow deploy.yml to call this workflow
 
 jobs:
-  checks:
+  lint-and-test:
     runs-on: ubuntu-latest
     env:
-      BOT_TOKEN: "dummy"
+      # Safe dummy values for tests - no real credentials needed
+      BOT_TOKEN: "0000000000:AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+      DATABASE_URL: "sqlite+aiosqlite:///:memory:"
+      CI: "true"
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -19,13 +23,13 @@ jobs:
           python-version: "3.12"
           cache: "pip"
 
-      - name: Install deps
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Lint
+      - name: Lint with ruff
         run: python -m ruff check .
 
-      - name: Tests
-        run: pytest
+      - name: Run tests
+        run: pytest -q --tb=short
