--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,5 @@
 # Auto-deploy to VPS on push to v2-editor branch AFTER CI passes.
-# Manual run: Actions → Deploy to VPS → Run workflow.
+# Manual run: Actions -> Deploy to VPS -> Run workflow.
 name: Deploy to VPS
 
 on:
@@ -21,7 +21,9 @@ jobs:
   deploy:
     needs: ci
     runs-on: ubuntu-latest
-    if: ${{ github.event_name == 'workflow_dispatch' || github.ref == 'refs/heads/v2-editor' }}
+    if: github.event_name == 'workflow_dispatch' || github.ref == 'refs/heads/v2-editor'
+    env:
+      DEPLOY_PORT: ${{ secrets.VPS_PORT }}
 
     steps:
       - name: Check deploy secrets
@@ -36,7 +38,7 @@ jobs:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
-          port: ${{ secrets.VPS_PORT || 22 }}
+          port: ${{ env.DEPLOY_PORT || 22 }}
           command_timeout: 10m
           script: |
             set -e
