--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,10 +59,12 @@ services:
       ALLOWED_ORIGINS: ${ALLOWED_ORIGINS:-}
       WEBAPP_ORIGINS: ${WEBAPP_ORIGINS:-}
       API_CORS_ORIGINS: ${API_CORS_ORIGINS:-}
+      WEBAPP_URL: ${WEBAPP_URL:-}
+      API_PUBLIC_URL: ${API_PUBLIC_URL:-}
       ADMIN_IDS: ${ADMIN_IDS:-}
       ADMIN_TELEGRAM_IDS: ${ADMIN_TELEGRAM_IDS:-}
       LOG_LEVEL: ${LOG_LEVEL:-INFO}
-      APP_ENV: ${APP_ENV:-local}
+      APP_ENV: ${APP_ENV:-production}
       TG_INIT_DATA_SKIP_VERIFY: ${TG_INIT_DATA_SKIP_VERIFY:-false}
       GIT_SHA: ${GIT_SHA:-unknown}
       GIT_BRANCH: ${GIT_BRANCH:-unknown}
