--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -2,7 +2,7 @@
 # HTTPS termination via Let's Encrypt + proxy to internal Docker services
 #
 # IMPORTANT: Replace <DOMAIN> with your actual domain before use!
-# Example: api.vibemom.com
+# Example: api.vibemom.ru
 #
 # Volumes expected:
 # - /etc/letsencrypt (certbot certs)
