Fix Mini App CORS for vibemom.ru and Android WebView

--- a/.env.example
+++ b/.env.example
@@ -20,14 +20,14 @@ V2_ALLOWLIST=
 #
 # Placeholders (replace in production):
 #   <API_DOMAIN>  = api.example.com (your API subdomain, A record -> VPS IP)
-#   <WEBAPP_URL>  = https://your-project.vercel.app
+#   <WEBAPP_URL>  = https://vibemom.ru
 #   <EMAIL>       = admin@example.com (for Let's Encrypt)
 #
 # ============================================
 
 # WebApp URL (HTTPS required!) - deployed frontend URL for Telegram Mini App
 # Set this on VPS in .env for bot to use
-# Example: https://your-app.vercel.app
+# Example: https://vibemom.ru
 WEBAPP_URL=<WEBAPP_URL>
 
 # Public API URL for Mini App frontend (accessible from internet via HTTPS)
