miniapp: self-test + build stamp + client-log

--- a/.env.example
+++ b/.env.example
@@ -64,3 +64,12 @@ TG_INIT_DATA_SKIP_VERIFY=false
 GIT_SHA=
 GIT_BRANCH=
 BUILD_TIME=
+
+# ============================================
+# Webapp build diagnostics (Vercel / Vite)
+# ============================================
+# Enable self-test overlay panel (hidden by default). Can also be enabled by URL: ?selftest=1
+VITE_SELF_TEST=0
+# Build stamp (CI should set these; Vite config also auto-stamps BUILD_TIME if missing)
+VITE_GIT_SHA=
+VITE_BUILD_TIME=
