--- a/services/webapp/vercel.json
+++ b/services/webapp/vercel.json
@@ -12,6 +12,15 @@
   ],
   "headers": [
     {
+      "source": "/build.json",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "no-store, max-age=0"
+        }
+      ]
+    },
+    {
       "source": "/(.*)",
       "headers": [
         {
