Moderation flow: publish to channel + public feed

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,9 @@ BOT_TOKEN=your_bot_token_from_botfather
 DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost:5432/vibe_market
 POSTGRES_PASSWORD=postgres
 ADMIN_CHAT_ID=
-# Канал для автопубликации после approve — одно значение: @vibecode777 или числовой id (-100...)
+# Канал для автопубликации после approve — одно значение: @username или числовой id (-100...)
+TARGET_CHANNEL_ID=
+# Legacy alias (will be used if TARGET_CHANNEL_ID is unset)
 FEED_CHAT_ID=
 ADMIN_IDS=1022192008
 # Legacy: ADMIN_TELEGRAM_IDS is also accepted if ADMIN_IDS is unset
