--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,8 @@ services:
     environment:
       DATABASE_URL: postgresql+asyncpg://postgres:${POSTGRES_PASSWORD:-postgres}@db:5432/vibe_market
       BOT_TOKEN: ${BOT_TOKEN:-}
+      TARGET_CHANNEL_ID: ${TARGET_CHANNEL_ID:-}
+      FEED_CHAT_ID: ${FEED_CHAT_ID:-}
       API_JWT_SECRET: ${API_JWT_SECRET:-change-me-in-production}
       API_JWT_TTL_MIN: ${API_JWT_TTL_MIN:-43200}
       ALLOWED_ORIGINS: ${ALLOWED_ORIGINS:-}
